--- a/class.css
+++ b/class.css
@@ -44,7 +44,7 @@ body {
     color: black;
     font-family:'Poppins', sans-serif;
     font-size: 18px;
-    font-style: normal;vj df
+    font-style: normal; 
     font-weight: 600;
     line-height: normal;
     text-transform: uppercase;
